0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/e_project/plot_project.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/e_project/plot_project.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_e_project_plot_project.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_e_project_plot_project.py:


Project creation
=======================================

In this example, we create a Project from scratch

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Let's assume we have three subproject to group in a single project

.. GENERATED FROM PYTHON SOURCE LINES 20-33

.. code-block:: Python


    proj = scp.Project(
        # subprojects
        scp.Project(name="P350", label=r"$\mathrm{M_P}\,(623\,K)$"),
        scp.Project(name="A350", label=r"$\mathrm{M_A}\,(623\,K)$"),
        scp.Project(name="B350", label=r"$\mathrm{M_B}\,(623\,K)$"),
        # attributes
        name="project_1",
        label="main project",
    )

    proj.projects_names





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['P350', 'A350', 'B350']



.. GENERATED FROM PYTHON SOURCE LINES 34-35

Add for example two datasets to the `A350` subproject.

.. GENERATED FROM PYTHON SOURCE LINES 37-38

Create two datasets

.. GENERATED FROM PYTHON SOURCE LINES 38-41

.. code-block:: Python

    ir = scp.NDDataset([1.1, 2.2, 3.3], coords=[[1, 2, 3]])
    ir






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] unitless (size: 3)[NDDataset_4b4dd038]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> NDDataset_4b4dd038</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1333-830</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-04 17:01:20+00:00</div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [     1.1      2.2      3.3]</div>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3</div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-45

.. code-block:: Python

    tg = scp.NDDataset([1, 3, 4], coords=[[1, 2, 3]])
    tg






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] unitless (size: 3)[NDDataset_4b4dd039]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> NDDataset_4b4dd039</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1333-830</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-04 17:01:20+00:00</div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [       1        3        4]</div>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3</div></div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 46-47

Add the datasets to the subproject

.. GENERATED FROM PYTHON SOURCE LINES 47-50

.. code-block:: Python

    proj.A350["IR"] = ir
    proj.A350["TG"] = tg








.. GENERATED FROM PYTHON SOURCE LINES 51-52

Members of the project or attributes are easily accessed:

.. GENERATED FROM PYTHON SOURCE LINES 52-58

.. code-block:: Python


    print(proj.A350)
    print(proj)
    print(proj.A350.label)
    print(proj.A350.TG)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Project A350:
        ⤷ IR (dataset)
        ⤷ TG (dataset)
    Project project_1:
        ⤷ P350 (sub-project)    ⤷ A350 (sub-project)
           ⤷ IR (dataset)
           ⤷ TG (dataset)    ⤷ B350 (sub-project)
    $\mathrm{M_A}\,(623\,K)$
    NDDataset: [float64] unitless (size: 3)




.. GENERATED FROM PYTHON SOURCE LINES 59-60

Save this project

.. GENERATED FROM PYTHON SOURCE LINES 60-63

.. code-block:: Python


    proj.save()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    PosixPath('/home/runner/work/spectrochempy/spectrochempy/src/spectrochempy/examples/core/e_project/project_1.pscp')



.. GENERATED FROM PYTHON SOURCE LINES 64-65

RELOAD the project from disk as newproj

.. GENERATED FROM PYTHON SOURCE LINES 65-70

.. code-block:: Python


    newproj = scp.Project.load("project_1")
    newproj







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    Project&nbsp;project_1:<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;P350&nbsp;(sub-project)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;A350&nbsp;(sub-project)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;IR&nbsp;(dataset)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;TG&nbsp;(dataset)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;B350&nbsp;(sub-project)
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 71-72

Now we add a script to the original proj

.. GENERATED FROM PYTHON SOURCE LINES 72-81

.. code-block:: Python


    script_source = """
    set_loglevel(INFO)
    info_('samples contained in the project are:%s'%proj.projects_names)
    """

    proj["print_info"] = scp.Script("print_info", script_source)
    proj






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    Project&nbsp;project_1:<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;P350&nbsp;(sub-project)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;A350&nbsp;(sub-project)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;IR&nbsp;(dataset)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;TG&nbsp;(dataset)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;B350&nbsp;(sub-project)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;print_info&nbsp;(script)
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 82-83

save but do not change the original data

.. GENERATED FROM PYTHON SOURCE LINES 83-86

.. code-block:: Python


    proj.save(overwrite_data=False)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    PosixPath('project_1.pscp')



.. GENERATED FROM PYTHON SOURCE LINES 87-88

RELOAD it

.. GENERATED FROM PYTHON SOURCE LINES 88-92

.. code-block:: Python


    newproj = scp.Project.load("project_1")
    newproj






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    Project&nbsp;project_1:<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;P350&nbsp;(sub-project)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;A350&nbsp;(sub-project)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;IR&nbsp;(dataset)<br/>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;TG&nbsp;(dataset)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;B350&nbsp;(sub-project)&nbsp;&nbsp;&nbsp;&nbsp;⤷&nbsp;print_info&nbsp;(script)
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 93-94

Execute a script

.. GENERATED FROM PYTHON SOURCE LINES 94-97

.. code-block:: Python


    scp.run_script(newproj.print_info)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     samples contained in the project are:['P350', 'A350', 'B350']




.. GENERATED FROM PYTHON SOURCE LINES 98-100

Another way to do the same thing is ith the following syntax (which may
seem simpler

.. GENERATED FROM PYTHON SOURCE LINES 100-103

.. code-block:: Python


    newproj.print_info()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

     samples contained in the project are:['P350', 'A350', 'B350']




.. GENERATED FROM PYTHON SOURCE LINES 104-105

Finally lets use a more useful script

.. GENERATED FROM PYTHON SOURCE LINES 105-113

.. code-block:: Python

    script_source_2 = """
    proj.A350.TG.plot_scatter(title='my scatter plot');
    #show()
    """
    proj["tgscatter"] = scp.Script("tgscatter", script_source_2)

    proj.tgscatter()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/e_project/images/sphx_glr_plot_project_001.png
   :alt: my scatter plot
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/e_project/images/sphx_glr_plot_project_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 114-116

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 116-118

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.439 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_e_project_plot_project.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_project.ipynb <plot_project.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_project.py <plot_project.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_project.zip <plot_project.zip>`
